chore: fixed MGAPopup and LayerInfo Title font

--- a/src/layerInfos/MapsGeoAdminLayerInfo/MapsGeoAdminLayerInfo.scss
+++ b/src/layerInfos/MapsGeoAdminLayerInfo/MapsGeoAdminLayerInfo.scss
@@ -1,6 +1,6 @@
 .wkp-maps-geo-admin-layer-info {
   .bod-title {
-    font-family: 'SBBWeb-Bold', 'Arial', 'sans-serif';
+    font-family: 'SBBWeb-Bold', Arial, sans-serif;
   }
 
   .legend-footer {
